--- a/day1/index.html
+++ b/day1/index.html
@@ -57,7 +57,7 @@
   <audio data-key="75" src="sounds/tom.wav"></audio>
   <audio data-key="76" src="sounds/tink.wav"></audio>
 
-  <script type="text/javascript" src="day1.js"></script>
+  <script type="text/javascript" src="index.js"></script>
 
 </body>
 </html>
