--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <ul>
         <li><a href="day1/index.html">Day 1 - JS Drum Kit</li>
         <li><a href="day2/index.html">Day 2 - CSS + JS Clock</a></li>
+        <li><a href="day3/index.html">Day 3 - Scoped CSS Variables and JS</a></li>
       </ul>
     </nav>
   </body>
