--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <li><a href="day1/index.html">Day 1 - JS Drum Kit</li>
         <li><a href="day2/index.html">Day 2 - CSS + JS Clock</a></li>
         <li><a href="day3/index.html">Day 3 - Scoped CSS Variables and JS</a></li>
+        <li><a href="day4/index.html">Day 4 - Array Cardio 💪</a></li>
       </ul>
     </nav>
   </body>
