--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <li><a href="day2/index.html">Day 2 - CSS + JS Clock</a></li>
         <li><a href="day3/index.html">Day 3 - Scoped CSS Variables and JS</a></li>
         <li><a href="day4/index.html">Day 4 - Array Cardio 💪</a></li>
+        <li><a href="day5/index.html">Day 5 - Flex Panels 💪</a></li>
       </ul>
     </nav>
   </body>
