--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <li><a href="day4/index.html">Day 4 - Array Cardio 💪</a></li>
         <li><a href="day5/index.html">Day 5 - Flex Panels 💪</a></li>
         <li><a href="day6/index.html">Day 6 - Type Ahead 👀</a></li>
+        <li><a href="day7/index.html">Day 7 - Array Cardio 💪💪</a></li>
       </ul>
     </nav>
   </body>
