--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <li><a href="day5/index.html">Day 5 - Flex Panels 💪</a></li>
         <li><a href="day6/index.html">Day 6 - Type Ahead 👀</a></li>
         <li><a href="day7/index.html">Day 7 - Array Cardio 💪💪</a></li>
+        <li><a href="day8/index.html">Day 8 - HTML5 Canvas</a></li>
       </ul>
     </nav>
   </body>
