--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <li><a href="day6/index.html">Day 6 - Type Ahead 👀</a></li>
         <li><a href="day7/index.html">Day 7 - Array Cardio 💪💪</a></li>
         <li><a href="day8/index.html">Day 8 - HTML5 Canvas</a></li>
+        <li><a href="day9/index.html">Day 9 - Console Tricks!</a></li>
       </ul>
     </nav>
   </body>
