--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <li><a href="day7/index.html">Day 7 - Array Cardio 💪💪</a></li>
         <li><a href="day8/index.html">Day 8 - HTML5 Canvas</a></li>
         <li><a href="day9/index.html">Day 9 - Console Tricks!</a></li>
+        <li><a href="day10/index.html">Day 10 - Hold Shift to Check Multiple Checkboxes</a></li>
       </ul>
     </nav>
   </body>
