--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <li><a href="day11/index.html">Day 11 - HTML Video Player</a></li>
         <li><a href="day12/index.html">Day 12 - Key Detection</a></li>
         <li><a href="day13/index.html">Day 13 - Slide in on Scroll</a></li>
+        <li><a href="day13/index.html">Day 14 - JS Reference VS Copy</a></li>
       </ul>
     </nav>
   </body>
